# backend/src/main/java/com/toni/dethroned/backend/auth/dto/AuthResponse.java
@@ -1,0 +1,17 @@
+package com.toni.dethroned.backend.auth.dto;
+
+public class AuthResponse {
+    private String playerId;
+
+    public AuthResponse(String playerId) {
+        this.playerId = playerId;
+    }
+
+    public String getPlayerId() {
+        return playerId;
+    }
+
+    public void setPlayerId(String playerId) {
+        this.playerId = playerId;
+    }
+}
